Add images and potato-wedges.html scaffold

--- a/air-fryer-recipes/potato-wedges.html
+++ b/air-fryer-recipes/potato-wedges.html
@@ -7,6 +7,14 @@
     <title>Potato Wedges</title>
 </head>
 <body>
+    <!-- Recipe Heading -->
     <h1>Potato Wedges</h1>
+    <!-- Image of unfinished recipe -->
+    <!-- Description Heading -->
+    <!-- Recipe description paragraph -->
+    <!-- Ingredients Heading -->
+    <!-- Ingredients unordered list -->
+    <!-- Steps ordered list -->
+    <!-- Image of finished recipe -->
 </body>
 </html>
