--- a/air-fryer-recipes/potato-wedges.html
+++ b/air-fryer-recipes/potato-wedges.html
@@ -1,20 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Potato Wedges</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- Recipe Heading -->
-    <h1>Potato Wedges</h1>
+    <h1>Air Fryer Potato Wedges</h1>
     <!-- Image of unfinished recipe -->
+    <img src="../images/potato-wedges.webp" alt="prepped potato wedges" />
     <!-- Description Heading -->
+    <h2>Description</h2>
     <!-- Recipe description paragraph -->
+    <p>
+      Quick and easy! These perfectly seasoned potato wedges are so crispy and
+      fluffy. A favorite for any potato lover.
+    </p>
     <!-- Ingredients Heading -->
+    <h3>Ingredients</h3>
     <!-- Ingredients unordered list -->
+    <ul>
+      <li>2 medium russet potatoes</li>
+      <li>1 ½ tablespoons olive oil</li>
+      <li>½ teaspoon ground paprika</li>
+      <li>½ teaspoon parsley flakes</li>
+      <li>½ teaspoon chili powder</li>
+      <li>½ teaspoon sea salt</li>
+      <li>⅛ teaspoon ground black pepper</li>
+    </ul>
+    <!-- Directions Heading -->
+    <h3>Directions</h3>
     <!-- Steps ordered list -->
-    <!-- Image of finished recipe -->
-</body>
+    <ol>
+      <li>
+        <p>Preheat an air fryer to 400 degrees F (200 degrees C).</p>
+      </li>
+      <li>
+        <p>
+          Cut each potato in half lengthwise. Cut each half in half lengthwise,
+          and then cut each quarter half lengthwise. You will have 16 wedges.
+        </p>
+      </li>
+      <li>
+        <p>
+          Place potato wedges in a large bowl. Add olive oil, paprika, parsley,
+          chili, salt, and pepper; mix until well combined.
+        </p>
+      </li>
+      <li>
+        <p>
+            Place 1/2 of the potato wedges in the basket of the air fryer and 
+            cook for 10 minutes.
+        </p>
+      </li>
+      <li>
+        <p>
+            Flip wedges with tongs and cook for an additional 5 minutes. Remove
+            to a plate
+        </p>
+      </li>
+      <li>
+        <p>
+            Repeat to cook the remaining wedges.
+        </p>
+      </li>
+    </ol>
+    <!-- Image of finished  -->
+    <img src="../images/finished-wedges.webp" alt="Finished potato wedges">
+  </body>
 </html>
