--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="air-fryer-recipes/potato-wedges.html">Potato Wedges</a>
+    <a href="air-fryer-recipes/burger-patties.html">Burger Patties</a>
 </body>
 </html>
