--- a/air-fryer-recipes/burger-patties.html
+++ b/air-fryer-recipes/burger-patties.html
@@ -1,20 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Burger Patties</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- Recipe Heading -->
+    <h1>Burger Patties</h1>
     <!-- Image of unfinished recipe -->
+    <img src="../images/uf-burger.webp" alt="Prepped Burgers" />
     <!-- Description Heading -->
+    <h2>Description</h2>
     <!-- Paragraph Description -->
+    <p>
+      The air fryer is a hack when it comes to making a juicy burger. For best
+      results, use cold meat and your favorite seasonings!
+    </p>
     <!-- Ingredients Heading -->
+    <h3>Ingredients</h3>
     <!-- Ingredients Unordered List -->
+    <ul>
+      <li>1 pound 80% lean ground beef</li>
+      <li>2 tablespoons melted butter</li>
+      <li>1 tablespoon beef base (such as Better than Bouillon)</li>
+      <li>freshly ground black pepper to taste</li>
+    </ul>
     <!-- Directions Heading -->
+    <h4>Directions</h4>
     <!-- Steps Ordered List -->
+    <ol>
+      <li>
+        <p>Preheat an air fryer to 400 degrees F (195 degrees C).</p>
+      </li>
+      <li>
+        <p>
+          Form beef into 4 patties, approximately 3/4 inches thick and 4 1/2
+          inches in diameter. Make the patties slightly bigger than the buns to
+          allow shrinkage.
+        </p>
+      </li>
+      <li>
+        <p>
+          Whisk together warm melted butter and beef soup base in a small bowl.
+          Brush lightly onto both sides of patties and season with pepper. Set
+          patties into the air fryer basket. Depending on the size of your air
+          fryer, you may need to cook them in batches.
+        </p>
+      </li>
+      <li>
+        <p>
+          Air-fry patties for 7 minutes, flipping halfway through, for medium
+          doneness. For well done, air-fry for an additional 2 minutes.
+        </p>
+      </li>
+    </ol>
     <!-- Image of finished recipe -->
-</body>
+    <img src="../images/fn-burger.webp" alt="Finished burger patties">
+  </body>
 </html>
