Modified coco-shrimp.html and index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <h2>Air Fryer List</h2>
     <ul>
       <li>
         <a href="air-fryer-recipes/potato-wedges.html">Potato Wedges</a>
@@ -15,6 +16,9 @@
       <li>
         <a href="air-fryer-recipes/burger-patties.html">Burger Patties</a>
       </li>
+    <li>
+        <a href="air-fryer-recipes/coconut-shrimp.html">Coconut Shrimp</a>
+    </li>
     </ul>
   </body>
 </html>
