--- a/air-fryer-recipes/coconut-shrimp.html
+++ b/air-fryer-recipes/coconut-shrimp.html
@@ -1,20 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coconut Shrimp</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- Recipe Heading -->
+    <h1>Coconut Shrimp</h1>
     <!-- Image of unfinished recipe -->
+    <img src="../images/uf-coco-shrimp.webp" alt="prepped coconut shrimp" />
     <!-- Description Heading -->
+    <h2>Description</h2>
     <!-- Paragraph description -->
+    <p>
+      Crispy and flavorful this recipe will make your mouth water. Try it with a
+      spicy honey-lime dip!
+    </p>
     <!-- Ingredients description -->
+    <h3>Ingredients</h3>
     <!-- Ingredients unordered list -->
+    <ul>
+      <li>½ cup all-purpose flour</li>
+      <li>1 ½ teaspoons ground black pepper</li>
+      <li>2 large eggs</li>
+      <li>⅔ cup unsweetened flaked coconut</li>
+      <li>⅓ cup panko bread crumbs</li>
+      <li>12 ounces uncooked medium shrimp, peeled and deveined</li>
+      <li>¼ cooking spray</li>
+      <li>½ teaspoon kosher salt, divided</li>
+      <li>¼ cup honey</li>
+      <li>¼ cup lime juice</li>
+      <li>1 serrano chile, thinly sliced</li>
+      <li>2 teaspoons chopped fresh cilantro</li>
+    </ul>
     <!-- Directions Heading -->
+    <h3>Directions</h3>
     <!-- Steps ordered list -->
+    <ol>
+      <li>
+        <p>
+          Stir together flour and pepper in a shallow dish. Lightly beat eggs in
+          a second shallow dish. Stir together coconut and panko in a third
+          shallow dish.
+        </p>
+      </li>
+      <li>
+        <p>
+          Working one at a time, dredge shrimp in flour mixture; shake off
+          excess. Dip floured shrimp in egg; allow any excess to drip off.
+          Finally, dredge in coconut mixture, pressing to adhere. Place shrimp
+          on a plate. Coat shrimp well with cooking spray.
+        </p>
+      </li>
+      <li>
+        <p>
+          Preheat the air fryer to 400 degrees F (200 degrees C). Place 1/2 of
+          the shrimp in the air fryer and cook about 3 minutes. Turn shrimp over
+          an continue cooking until golden, about 3 minutes more. Season with
+          1/4 teaspoon salt. Repeat with remaining shrimp.
+        </p>
+      </li>
+      <li>
+        <p>
+          Meanwhile, whisk together honey, lime juice, and serrano chile in a
+          small bowl.
+        </p>
+      </li>
+      <li>
+        <p>
+          Sprinkle fried shrimp with cilantro and server with honey-lime dip.
+        </p>
+      </li>
+    </ol>
     <!-- Image of finished recipe -->
-</body>
+    <img src="../images/fn-coco-shrimp.webp" alt="Finished coconut shrimp">
+  </body>
 </html>
